# lazyvim

./: .gitignore  Cargo.toml  LICENSE  README-PORTABLE.md  README.md  build.rs
.github/workflows/: ci.yml  delete-release.yml  release.yml  smoke.yml
assets/starter/: init.lua
assets/starter/lua/config/: autocmds.lua  keymaps.lua  options.lua
assets/starter/lua/plugins/: example.lua
scripts/: package-unix.sh  package-windows.ps1  release-notes.sh  set-version.py
src/: main.rs
